v1.0.0/modules/schema/pages/class/Meter.adoc
= `Meter`
:toclevels: 4


+++Physical asset that performs the metering role of the usage point. Used for measuring consumption and detection of events.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Meter`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Asset.adoc[`Asset`]
*** xref::class/AssetContainer.adoc[`AssetContainer`]
**** xref::class/EndDevice.adoc[`EndDevice`]
***** *`Meter`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Meter {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



MeterMultiplier {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



MeterReading {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



MeterWorkTask {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Transaction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



MeterWorkTask {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}





EndDeviceInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDeviceFunction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDeviceEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDeviceControl {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UsagePoint {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Customer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



MeterReadSchedule {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ServiceLocation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDeviceGroup {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Seal {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



LandProperty {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AcceptanceTest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}





InUseDate {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



LifecycleDate {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}





Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Location {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Measurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AssetInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Reconditioning {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProductAssetModel {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetDeployment {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpRecDelvLineItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetPropertyCurve {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetContainer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PowerSystemResource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AssetFunction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ActivityRecord {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetOrganisationRole {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpInventory {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



FinancialInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Incident {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ReliabilityInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Procedure {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AnalyticScore {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ServiceLocation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Analytic {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OperationalTag {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Ownership {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WorkTask {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpItemMaster {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Medium {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchOperationSummary {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetGroup {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WorkTask {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ScheduledEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProcedureDataSet {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Meter -> MeterMultiplier: MeterMultipliers


Meter -> MeterReading: MeterReadings


Meter -> MeterWorkTask: MeterReplacementWorkTasks


Meter -> Transaction: VendingTransactions


Meter -> MeterWorkTask: MeterServiceWorkTask



Meter -> EndDeviceInfo: EndDeviceInfo


Meter -> EndDeviceFunction: EndDeviceFunctions


Meter -> EndDeviceEvent: EndDeviceEvents


Meter -> EndDeviceControl: EndDeviceControls


Meter -> UsagePoint: UsagePoint


Meter -> Customer: Customer


Meter -> MeterReadSchedule: MeterReadSchedule


Meter -> ServiceLocation: ServiceLocation


Meter -> EndDeviceGroup: EndDeviceGroups


Meter -> Seal: Seals


Meter -> LandProperty: LandProperties


Meter -> Asset: Assets


Meter -> AcceptanceTest: acceptanceTest


Meter -> ElectronicAddress: electronicAddress



Meter -> InUseDate: inUseDate


Meter -> LifecycleDate: lifecycleDate



Meter -> Status: status


Meter -> Location: Location


Meter -> Measurement: Measurements


Meter -> AssetInfo: AssetInfo


Meter -> Reconditioning: Reconditionings


Meter -> ProductAssetModel: ProductAssetModel


Meter -> AssetDeployment: AssetDeployment


Meter -> ErpRecDelvLineItem: ErpRecDeliveryItems


Meter -> ConfigurationEvent: ConfigurationEvents


Meter -> AssetPropertyCurve: AssetPropertyCurves


Meter -> AssetContainer: AssetContainer


Meter -> PowerSystemResource: PowerSystemResources


Meter -> AssetFunction: AssetFunction


Meter -> ActivityRecord: ActivityRecords


Meter -> AssetOrganisationRole: OrganisationRoles


Meter -> ErpInventory: ErpInventory


Meter -> FinancialInfo: FinancialInfo


Meter -> Incident: Incident


Meter -> ReliabilityInfo: ReliabilityInfos


Meter -> Procedure: Procedures


Meter -> AnalyticScore: AnalyticScore


Meter -> ServiceLocation: ServiceLocation


Meter -> Analytic: Analytic


Meter -> OperationalTag: OperationalTags


Meter -> Ownership: Ownerships


Meter -> WorkTask: WorkTasks


Meter -> ErpItemMaster: ErpItemMaster


Meter -> Medium: Medium


Meter -> SwitchOperationSummary: BreakerOperation


Meter -> AssetGroup: AssetGroup


Meter -> WorkTask: ReplacementWorkTasks


Meter -> ScheduledEvent: ScheduledEvents


Meter -> ProcedureDataSet: ProcedureDataSet


Meter -> DiagramObject: DiagramObjects


Meter -> InstanceSet: InstanceSet


Meter -> Name: Names


Meter -> ChangeSetMember: PropertiesCIMDataObject


Meter -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<connectionCategory,`connectionCategory`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++A code used to specify the connection category, e.g. low voltage, where the meter operates.+++

| <<formNumber,`formNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Meter form designation per ANSI C12.10 or other applicable standard. An alphanumeric designation denoting the circuit arrangement for which the meter is applicable and its specific terminal arrangement.+++

| <<MeterMultipliers,`MeterMultipliers`>>
| 0..*
| xref::class/MeterMultiplier.adoc[`MeterMultiplier`]
| +++All multipliers applied at this meter.+++

| <<MeterReadings,`MeterReadings`>>
| 0..*
| xref::class/MeterReading.adoc[`MeterReading`]
| +++All meter readings provided by this meter.+++

| <<MeterReplacementWorkTasks,`MeterReplacementWorkTasks`>>
| 0..*
| xref::class/MeterWorkTask.adoc[`MeterWorkTask`]
| +++All work tasks on replacement of this old meter.+++

| <<MeterServiceWorkTask,`MeterServiceWorkTask`>>
| 0..*
| xref::class/MeterWorkTask.adoc[`MeterWorkTask`]
| +++All non-replacement work tasks on this meter.+++

| <<VendingTransactions,`VendingTransactions`>>
| 0..*
| xref::class/Transaction.adoc[`Transaction`]
| +++All vending transactions on this meter.+++

| <<AssetContainer,`AssetContainer`>>
| 0..1
| xref::class/AssetContainer.adoc[`AssetContainer`]
| +++Container of this asset.+++

| <<AssetDeployment,`AssetDeployment`>>
| 0..1
| xref::class/AssetDeployment.adoc[`AssetDeployment`]
| +++This asset's deployment.+++

| <<AssetInfo,`AssetInfo`>>
| 0..1
| xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Data applicable to this asset.+++

| <<BreakerOperation,`BreakerOperation`>>
| 0..1
| xref::class/SwitchOperationSummary.adoc[`SwitchOperationSummary`]
| +++Breaker operation information for this breaker.+++

| <<Customer,`Customer`>>
| 0..1
| xref::class/Customer.adoc[`Customer`]
| +++Customer owning this end device.+++

| <<EndDeviceInfo,`EndDeviceInfo`>>
| 0..1
| xref::class/EndDeviceInfo.adoc[`EndDeviceInfo`]
| +++End device data.+++

| <<ErpInventory,`ErpInventory`>>
| 0..1
| xref::class/ErpInventory.adoc[`ErpInventory`]
| n/a

| <<ErpItemMaster,`ErpItemMaster`>>
| 0..1
| xref::class/ErpItemMaster.adoc[`ErpItemMaster`]
| n/a

| <<FinancialInfo,`FinancialInfo`>>
| 0..1
| xref::class/FinancialInfo.adoc[`FinancialInfo`]
| +++Financial information related to this asset.+++

| <<Location,`Location`>>
| 0..1
| xref::class/Location.adoc[`Location`]
| +++Location of this asset.+++

| <<MeterReadSchedule,`MeterReadSchedule`>>
| 0..1
| xref::class/MeterReadSchedule.adoc[`MeterReadSchedule`]
| +++Meter read schedule that applies to the end device+++

| <<ProductAssetModel,`ProductAssetModel`>>
| 0..1
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++The model of this asset.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<ServiceLocation,`ServiceLocation`>>
| 0..1
| xref::class/ServiceLocation.adoc[`ServiceLocation`]
| +++Service location whose service delivery is measured by this end device.+++

| <<ServiceLocation,`ServiceLocation`>>
| 0..1
| xref::class/ServiceLocation.adoc[`ServiceLocation`]
| +++The sevice location at which the assets exist+++

| <<UsagePoint,`UsagePoint`>>
| 0..1
| xref::class/UsagePoint.adoc[`UsagePoint`]
| +++Usage point to which this end device belongs.+++

| <<acceptanceTest,`acceptanceTest`>>
| 0..1
| xref::class/AcceptanceTest.adoc[`AcceptanceTest`]
| +++Information on acceptance test.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<amrSystem,`amrSystem`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Automated meter reading (AMR) or other communication system responsible for communications to this end device.+++

| <<critical,`critical`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if asset is considered critical for some reason (for example, a pole with critical attachments).+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<inUseDate,`inUseDate`>>
| 0..1
| xref::class/InUseDate.adoc[`InUseDate`]
| +++In use dates for this asset.+++

| <<inUseState,`inUseState`>>
| 0..1
| xref::enumeration/InUseStateKind.adoc[`InUseStateKind`]
| +++Indication of whether asset is currently deployed (in use), ready to be put into use or not available for use.+++

| <<initialCondition,`initialCondition`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Condition of asset at last baseline. Examples include new, rebuilt, overhaul required, other. Refer to inspection data for information on the most current condition of the asset.+++

| <<initialLossOfLife,`initialLossOfLife`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++Percentage of initial life expectancy that has been lost as of the last life expectancy baseline. Represents 
(initial life expectancy - current life expectancy) / initial life expectancy.+++

| <<installCode,`installCode`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Installation code.+++

| <<isPan,`isPan`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, this is a premises area network (PAN) device.+++

| <<isSmartInverter,`isSmartInverter`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, there is a communicating inverter present.+++

| <<isVirtual,`isVirtual`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, there is no physical device. As an example, a virtual meter can be defined to aggregate the consumption for two or more physical meters. Otherwise, this is a physical hardware device.+++

| <<kind,`kind`>>
| 0..1
| xref::enumeration/AssetKind.adoc[`AssetKind`]
| +++Kind of asset. Used in description of asset components in asset instance templates.+++

| <<lifecycleDate,`lifecycleDate`>>
| 0..1
| xref::class/LifecycleDate.adoc[`LifecycleDate`]
| +++<was lifecycle>
Lifecycle dates for this asset.+++

| <<lifecycleState,`lifecycleState`>>
| 0..1
| xref::enumeration/AssetLifecycleStateKind.adoc[`AssetLifecycleStateKind`]
| +++Current lifecycle state of asset.+++

| <<lotNumber,`lotNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Lot number for this asset. Even for the same model and version number, many assets are manufactured in lots.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<position,`position`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Position of asset or asset component. May often be in relation to other assets or components.+++

| <<purchasePrice,`purchasePrice`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Purchase price of asset.+++

| <<retiredReason,`retiredReason`>>
| 0..1
| xref::enumeration/RetiredReasonKind.adoc[`RetiredReasonKind`]
| +++Reason asset retired.+++

| <<serialNumber,`serialNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Serial number of this asset.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this asset.+++

| <<timeZoneOffset,`timeZoneOffset`>>
| 0..1
| xref::class/Minutes.adoc[`Minutes`]
| +++Time zone offset relative to GMT for the location of this end device.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of Asset and its subtypes, according to their corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

| <<utcNumber,`utcNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Uniquely tracked commodity (UTC) number.+++

| <<ActivityRecords,`ActivityRecords`>>
| 0..*
| xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++All activity records created for this asset.+++

| <<Analytic,`Analytic`>>
| 0..*
| xref::class/Analytic.adoc[`Analytic`]
| +++Analytic performed on this asset.+++

| <<AnalyticScore,`AnalyticScore`>>
| 0..*
| xref::class/AnalyticScore.adoc[`AnalyticScore`]
| +++Analytic result related to this asset.+++

| <<AssetFunction,`AssetFunction`>>
| 0..*
| xref::class/AssetFunction.adoc[`AssetFunction`]
| +++Function performed by this asset.+++

| <<AssetGroup,`AssetGroup`>>
| 0..*
| xref::class/AssetGroup.adoc[`AssetGroup`]
| +++Asset group of which this asset is a part.+++

| <<AssetPropertyCurves,`AssetPropertyCurves`>>
| 0..*
| xref::class/AssetPropertyCurve.adoc[`AssetPropertyCurve`]
| n/a

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets within this container asset.+++

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this asset.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<EndDeviceControls,`EndDeviceControls`>>
| 0..*
| xref::class/EndDeviceControl.adoc[`EndDeviceControl`]
| +++All end device controls sending commands to this end device.+++

| <<EndDeviceEvents,`EndDeviceEvents`>>
| 0..*
| xref::class/EndDeviceEvent.adoc[`EndDeviceEvent`]
| +++All events reported by this end device.+++

| <<EndDeviceFunctions,`EndDeviceFunctions`>>
| 0..*
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]
| +++All end device functions this end device performs.+++

| <<EndDeviceGroups,`EndDeviceGroups`>>
| 0..*
| xref::class/EndDeviceGroup.adoc[`EndDeviceGroup`]
| +++All end device groups referring to this end device.+++

| <<ErpRecDeliveryItems,`ErpRecDeliveryItems`>>
| 0..*
| xref::class/ErpRecDelvLineItem.adoc[`ErpRecDelvLineItem`]
| n/a

| <<Incident,`Incident`>>
| 0..*
| xref::class/Incident.adoc[`Incident`]
| n/a

| <<LandProperties,`LandProperties`>>
| 0..*
| xref::class/LandProperty.adoc[`LandProperty`]
| n/a

| <<Measurements,`Measurements`>>
| 0..*
| xref::class/Measurement.adoc[`Measurement`]
| +++Measurement related to this asset.+++

| <<Medium,`Medium`>>
| 0..*
| xref::class/Medium.adoc[`Medium`]
| +++Medium with which this asset is filled.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<OperationalTags,`OperationalTags`>>
| 0..*
| xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this asset.+++

| <<OrganisationRoles,`OrganisationRoles`>>
| 0..*
| xref::class/AssetOrganisationRole.adoc[`AssetOrganisationRole`]
| +++All roles an organisation plays for this asset.+++

| <<Ownerships,`Ownerships`>>
| 0..*
| xref::class/Ownership.adoc[`Ownership`]
| +++All ownerships of this asset.+++

| <<PowerSystemResources,`PowerSystemResources`>>
| 0..*
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources used to electrically model this asset. For example, transformer asset is electrically modelled with a transformer and its windings and tap changer.+++

| <<ProcedureDataSet,`ProcedureDataSet`>>
| 0..*
| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]
| +++Procedure data set that applies to this asset.+++

| <<Procedures,`Procedures`>>
| 0..*
| xref::class/Procedure.adoc[`Procedure`]
| +++All procedures applicable to this asset.+++

| <<Reconditionings,`Reconditionings`>>
| 0..*
| xref::class/Reconditioning.adoc[`Reconditioning`]
| n/a

| <<ReliabilityInfos,`ReliabilityInfos`>>
| 0..*
| xref::class/ReliabilityInfo.adoc[`ReliabilityInfo`]
| n/a

| <<ReplacementWorkTasks,`ReplacementWorkTasks`>>
| 0..*
| xref::class/WorkTask.adoc[`WorkTask`]
| +++All work tasks on replacement of this old asset.+++

| <<ScheduledEvents,`ScheduledEvents`>>
| 0..*
| xref::class/ScheduledEvent.adoc[`ScheduledEvent`]
| +++Scheduled event related to this asset.+++

| <<Seals,`Seals`>>
| 0..*
| xref::class/Seal.adoc[`Seal`]
| +++All seals applied to this asset container.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<WorkTasks,`WorkTasks`>>
| 0..*
| xref::class/WorkTask.adoc[`WorkTask`]
| +++All non-replacement work tasks performed on this asset.+++
|===

'''


//[discrete]
[#acceptanceTest]
=== `acceptanceTest`
+++Information on acceptance test.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.acceptanceTest`
| Cardinality
| 0..1
| Type
| xref::class/AcceptanceTest.adoc[`AcceptanceTest`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#ActivityRecords]
=== `ActivityRecords`
+++All activity records created for this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ActivityRecords`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#amrSystem]
=== `amrSystem`
+++Automated meter reading (AMR) or other communication system responsible for communications to this end device.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.amrSystem`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#Analytic]
=== `Analytic`
+++Analytic performed on this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Analytic`
| Cardinality
| 0..*
| Type
| xref::class/Analytic.adoc[`Analytic`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#AnalyticScore]
=== `AnalyticScore`
+++Analytic result related to this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AnalyticScore`
| Cardinality
| 0..*
| Type
| xref::class/AnalyticScore.adoc[`AnalyticScore`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#AssetContainer]
=== `AssetContainer`
+++Container of this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetContainer`
| Cardinality
| 0..1
| Type
| xref::class/AssetContainer.adoc[`AssetContainer`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#AssetDeployment]
=== `AssetDeployment`
+++This asset's deployment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetDeployment`
| Cardinality
| 0..1
| Type
| xref::class/AssetDeployment.adoc[`AssetDeployment`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#AssetFunction]
=== `AssetFunction`
+++Function performed by this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetFunction`
| Cardinality
| 0..*
| Type
| xref::class/AssetFunction.adoc[`AssetFunction`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#AssetGroup]
=== `AssetGroup`
+++Asset group of which this asset is a part.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetGroup`
| Cardinality
| 0..*
| Type
| xref::class/AssetGroup.adoc[`AssetGroup`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#AssetInfo]
=== `AssetInfo`
+++Data applicable to this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetInfo`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#AssetPropertyCurves]
=== `AssetPropertyCurves`


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetPropertyCurves`
| Cardinality
| 0..*
| Type
| xref::class/AssetPropertyCurve.adoc[`AssetPropertyCurve`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets within this container asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetContainer.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetContainer.adoc[`AssetContainer`]


|===

//[discrete]
[#BreakerOperation]
=== `BreakerOperation`
+++Breaker operation information for this breaker.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.BreakerOperation`
| Cardinality
| 0..1
| Type
| xref::class/SwitchOperationSummary.adoc[`SwitchOperationSummary`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#connectionCategory]
=== `connectionCategory`
+++A code used to specify the connection category, e.g. low voltage, where the meter operates.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Meter.connectionCategory`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#critical]
=== `critical`
+++True if asset is considered critical for some reason (for example, a pole with critical attachments).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.critical`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#Customer]
=== `Customer`
+++Customer owning this end device.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.Customer`
| Cardinality
| 0..1
| Type
| xref::class/Customer.adoc[`Customer`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#EndDeviceControls]
=== `EndDeviceControls`
+++All end device controls sending commands to this end device.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.EndDeviceControls`
| Cardinality
| 0..*
| Type
| xref::class/EndDeviceControl.adoc[`EndDeviceControl`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#EndDeviceEvents]
=== `EndDeviceEvents`
+++All events reported by this end device.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.EndDeviceEvents`
| Cardinality
| 0..*
| Type
| xref::class/EndDeviceEvent.adoc[`EndDeviceEvent`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#EndDeviceFunctions]
=== `EndDeviceFunctions`
+++All end device functions this end device performs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.EndDeviceFunctions`
| Cardinality
| 0..*
| Type
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#EndDeviceGroups]
=== `EndDeviceGroups`
+++All end device groups referring to this end device.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.EndDeviceGroups`
| Cardinality
| 0..*
| Type
| xref::class/EndDeviceGroup.adoc[`EndDeviceGroup`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#EndDeviceInfo]
=== `EndDeviceInfo`
+++End device data.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.EndDeviceInfo`
| Cardinality
| 0..1
| Type
| xref::class/EndDeviceInfo.adoc[`EndDeviceInfo`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#ErpInventory]
=== `ErpInventory`


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ErpInventory`
| Cardinality
| 0..1
| Type
| xref::class/ErpInventory.adoc[`ErpInventory`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#ErpItemMaster]
=== `ErpItemMaster`


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ErpItemMaster`
| Cardinality
| 0..1
| Type
| xref::class/ErpItemMaster.adoc[`ErpItemMaster`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#ErpRecDeliveryItems]
=== `ErpRecDeliveryItems`


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ErpRecDeliveryItems`
| Cardinality
| 0..*
| Type
| xref::class/ErpRecDelvLineItem.adoc[`ErpRecDelvLineItem`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#FinancialInfo]
=== `FinancialInfo`
+++Financial information related to this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.FinancialInfo`
| Cardinality
| 0..1
| Type
| xref::class/FinancialInfo.adoc[`FinancialInfo`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#formNumber]
=== `formNumber`
+++Meter form designation per ANSI C12.10 or other applicable standard. An alphanumeric designation denoting the circuit arrangement for which the meter is applicable and its specific terminal arrangement.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Meter.formNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#Incident]
=== `Incident`


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Incident`
| Cardinality
| 0..*
| Type
| xref::class/Incident.adoc[`Incident`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#initialCondition]
=== `initialCondition`
+++Condition of asset at last baseline. Examples include new, rebuilt, overhaul required, other. Refer to inspection data for information on the most current condition of the asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.initialCondition`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#initialLossOfLife]
=== `initialLossOfLife`
+++Percentage of initial life expectancy that has been lost as of the last life expectancy baseline. Represents 
(initial life expectancy - current life expectancy) / initial life expectancy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.initialLossOfLife`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#installCode]
=== `installCode`
+++Installation code.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.installCode`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#inUseDate]
=== `inUseDate`
+++In use dates for this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.inUseDate`
| Cardinality
| 0..1
| Type
| xref::class/InUseDate.adoc[`InUseDate`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#inUseState]
=== `inUseState`
+++Indication of whether asset is currently deployed (in use), ready to be put into use or not available for use.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.inUseState`
| Cardinality
| 0..1
| Type
| xref::enumeration/InUseStateKind.adoc[`InUseStateKind`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#isPan]
=== `isPan`
+++If true, this is a premises area network (PAN) device.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.isPan`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#isSmartInverter]
=== `isSmartInverter`
+++If true, there is a communicating inverter present.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.isSmartInverter`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#isVirtual]
=== `isVirtual`
+++If true, there is no physical device. As an example, a virtual meter can be defined to aggregate the consumption for two or more physical meters. Otherwise, this is a physical hardware device.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.isVirtual`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#kind]
=== `kind`
+++Kind of asset. Used in description of asset components in asset instance templates.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/AssetKind.adoc[`AssetKind`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#LandProperties]
=== `LandProperties`


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetContainer.LandProperties`
| Cardinality
| 0..*
| Type
| xref::class/LandProperty.adoc[`LandProperty`]

| Inherited from
| xref::class/AssetContainer.adoc[`AssetContainer`]


|===

//[discrete]
[#lifecycleDate]
=== `lifecycleDate`
+++<was lifecycle>
Lifecycle dates for this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.lifecycleDate`
| Cardinality
| 0..1
| Type
| xref::class/LifecycleDate.adoc[`LifecycleDate`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#lifecycleState]
=== `lifecycleState`
+++Current lifecycle state of asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.lifecycleState`
| Cardinality
| 0..1
| Type
| xref::enumeration/AssetLifecycleStateKind.adoc[`AssetLifecycleStateKind`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#Location]
=== `Location`
+++Location of this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#lotNumber]
=== `lotNumber`
+++Lot number for this asset. Even for the same model and version number, many assets are manufactured in lots.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.lotNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#Measurements]
=== `Measurements`
+++Measurement related to this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#Medium]
=== `Medium`
+++Medium with which this asset is filled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Medium`
| Cardinality
| 0..*
| Type
| xref::class/Medium.adoc[`Medium`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#MeterMultipliers]
=== `MeterMultipliers`
+++All multipliers applied at this meter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Meter.MeterMultipliers`
| Cardinality
| 0..*
| Type
| xref::class/MeterMultiplier.adoc[`MeterMultiplier`]


|===

//[discrete]
[#MeterReadings]
=== `MeterReadings`
+++All meter readings provided by this meter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Meter.MeterReadings`
| Cardinality
| 0..*
| Type
| xref::class/MeterReading.adoc[`MeterReading`]


|===

//[discrete]
[#MeterReadSchedule]
=== `MeterReadSchedule`
+++Meter read schedule that applies to the end device+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.MeterReadSchedule`
| Cardinality
| 0..1
| Type
| xref::class/MeterReadSchedule.adoc[`MeterReadSchedule`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#MeterReplacementWorkTasks]
=== `MeterReplacementWorkTasks`
+++All work tasks on replacement of this old meter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Meter.MeterReplacementWorkTasks`
| Cardinality
| 0..*
| Type
| xref::class/MeterWorkTask.adoc[`MeterWorkTask`]


|===

//[discrete]
[#MeterServiceWorkTask]
=== `MeterServiceWorkTask`
+++All non-replacement work tasks on this meter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Meter.MeterServiceWorkTask`
| Cardinality
| 0..*
| Type
| xref::class/MeterWorkTask.adoc[`MeterWorkTask`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#OrganisationRoles]
=== `OrganisationRoles`
+++All roles an organisation plays for this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.OrganisationRoles`
| Cardinality
| 0..*
| Type
| xref::class/AssetOrganisationRole.adoc[`AssetOrganisationRole`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#Ownerships]
=== `Ownerships`
+++All ownerships of this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Ownerships`
| Cardinality
| 0..*
| Type
| xref::class/Ownership.adoc[`Ownership`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#position]
=== `position`
+++Position of asset or asset component. May often be in relation to other assets or components.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.position`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources used to electrically model this asset. For example, transformer asset is electrically modelled with a transformer and its windings and tap changer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#ProcedureDataSet]
=== `ProcedureDataSet`
+++Procedure data set that applies to this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ProcedureDataSet`
| Cardinality
| 0..*
| Type
| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#Procedures]
=== `Procedures`
+++All procedures applicable to this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Procedures`
| Cardinality
| 0..*
| Type
| xref::class/Procedure.adoc[`Procedure`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++The model of this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ProductAssetModel`
| Cardinality
| 0..1
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#purchasePrice]
=== `purchasePrice`
+++Purchase price of asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.purchasePrice`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#Reconditionings]
=== `Reconditionings`


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Reconditionings`
| Cardinality
| 0..*
| Type
| xref::class/Reconditioning.adoc[`Reconditioning`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#ReliabilityInfos]
=== `ReliabilityInfos`


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ReliabilityInfos`
| Cardinality
| 0..*
| Type
| xref::class/ReliabilityInfo.adoc[`ReliabilityInfo`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#ReplacementWorkTasks]
=== `ReplacementWorkTasks`
+++All work tasks on replacement of this old asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ReplacementWorkTasks`
| Cardinality
| 0..*
| Type
| xref::class/WorkTask.adoc[`WorkTask`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#retiredReason]
=== `retiredReason`
+++Reason asset retired.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.retiredReason`
| Cardinality
| 0..1
| Type
| xref::enumeration/RetiredReasonKind.adoc[`RetiredReasonKind`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#ScheduledEvents]
=== `ScheduledEvents`
+++Scheduled event related to this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ScheduledEvents`
| Cardinality
| 0..*
| Type
| xref::class/ScheduledEvent.adoc[`ScheduledEvent`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#Seals]
=== `Seals`
+++All seals applied to this asset container.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetContainer.Seals`
| Cardinality
| 0..*
| Type
| xref::class/Seal.adoc[`Seal`]

| Inherited from
| xref::class/AssetContainer.adoc[`AssetContainer`]


|===

//[discrete]
[#serialNumber]
=== `serialNumber`
+++Serial number of this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.serialNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#ServiceLocation]
=== `ServiceLocation`
+++Service location whose service delivery is measured by this end device.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.ServiceLocation`
| Cardinality
| 0..1
| Type
| xref::class/ServiceLocation.adoc[`ServiceLocation`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#ServiceLocation]
=== `ServiceLocation`
+++The sevice location at which the assets exist+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ServiceLocation`
| Cardinality
| 0..1
| Type
| xref::class/ServiceLocation.adoc[`ServiceLocation`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#status]
=== `status`
+++Status of this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#timeZoneOffset]
=== `timeZoneOffset`
+++Time zone offset relative to GMT for the location of this end device.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.timeZoneOffset`
| Cardinality
| 0..1
| Type
| xref::class/Minutes.adoc[`Minutes`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#type]
=== `type`
+++Utility-specific classification of Asset and its subtypes, according to their corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#UsagePoint]
=== `UsagePoint`
+++Usage point to which this end device belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDevice.UsagePoint`
| Cardinality
| 0..1
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]

| Inherited from
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#utcNumber]
=== `utcNumber`
+++Uniquely tracked commodity (UTC) number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.utcNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#VendingTransactions]
=== `VendingTransactions`
+++All vending transactions on this meter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Meter.VendingTransactions`
| Cardinality
| 0..*
| Type
| xref::class/Transaction.adoc[`Transaction`]


|===

//[discrete]
[#WorkTasks]
=== `WorkTasks`
+++All non-replacement work tasks performed on this asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.WorkTasks`
| Cardinality
| 0..*
| Type
| xref::class/WorkTask.adoc[`WorkTask`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===


